Fix NPC ability icon alignment to match spell list

--- a/css/trilhamarga.css
+++ b/css/trilhamarga.css
@@ -303,12 +303,14 @@ body.game .sheet.app header.sheet-header {
 }
 
 .trilhamarga .tab.spells .flexrow,
-.trilhamarga .npc-spells .flexrow {
+.trilhamarga .npc-spells .flexrow,
+.trilhamarga .npc-abilities .flexrow {
   align-items: flex-start;
 }
 
 .trilhamarga .tab.spells .item .item-image,
-.trilhamarga .npc-spells .item .item-image {
+.trilhamarga .npc-spells .item .item-image,
+.trilhamarga .npc-abilities .item .item-image {
   margin-top: 5px;
 }
 
